styles/styles.css
/* ... */
.tag {
  display: inline-block;
  padding: 0.25rem 0.75rem;
  font-size: 0.75rem;
  font-weight: 500;
  color: var(--color-accent);
  border: 1px solid var(--color-accent);
  border-radius: 9999px; /* Perfect circle no matter the size */
}

.project-link {
  color: var(--color-text-secondary);
  font-size: 0.9rem;
  display: inline-flex;
  align-items: center;
  gap: 0.3rem;
  padding: 0.3rem 0.5rem;
  border: 1px solid var(--color-accent);
  border-radius: 9999px; /* Perfect circle no matter the size */
  transition: all 300ms;
}

/* ------------------ */
/* EXPERIENCE SECTION */
/* ------------------ */

.timeline {
  position: relative;
}

/* Pseudo-elements 'before' allows adding visual elements without adding anything to html file */
.timeline::before {
  content: ""; /* If removed, the whole pseudo-element disappears */
  position: absolute;
  left: 50%; 
  transform: translateX(-50%); /* Apply perfect centering, offsetting by 1/2 width of the element */
  top: 0;
  bottom: 0;
  width: 2px;
  background-color: var(--color-accent);
}

.timeline-entry {
  position: relative;
  width: 50%;
  margin-bottom: 2rem;
}

/* Right side entry */
.timeline-entry:nth-child(odd) {
  margin-left: 50%;
  padding-left: 2rem;
}

/* Left side entry */
.timeline-entry:nth-child(even) {
  margin-right: 50%;
  padding-right: 2rem;
  text-align: right;
}

/* Right side ball */
.timeline-entry:nth-child(odd)::before {
  content: ""; /* If removed, the whole pseudo-element disappears */
  position: absolute;
  left: -5px;
  top: 1.7rem;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: var(--color-accent);
}

/* Left side ball */
.timeline-entry:nth-child(even)::before {
  content: ""; /* If removed, the whole pseudo-element disappears */
  position: absolute;
  right: -5px;
  top: 1.7rem;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: var(--color-accent);
}

.timeline-date {
  color: var(--color-text-secondary);
}

.timeline-title {
  color: var(--color-accent);
  text-decoration: underline;
}

.timeline-company {
  color: var(--color-text-primary);
}

.timeline-info {
  color: var(--color-text-secondary);
}

/* -------------- */
/* SKILLS SECTION */
/* -------------- */

.skills-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1.5rem;
}

.skills-card {
  display: flex;
  flex-direction: column;
  background-color: var(--color-bg-card);
  border: 1px solid var(--color-accent);
  border-radius: 1.5rem;
  overflow: hidden;
}

.skills-title {
  color: var(--color-accent);
  padding: 1rem 0 1rem 1.3rem;
}

.skills-list {
  color: var(--color-text-secondary);
  list-style-type: circle;
  padding: 0 0 1rem 2.5rem;
}

.skills-list li::marker {
  color: var(--color-accent);
}

/* --------------- */
/* CONTACT SECTION */
/* --------------- */

.contact-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--color-accent);
  border-radius: 1.5rem;
  padding: 1rem;
}

.contact-title {
  text-align: center;
  color: var(--color-text-primary);
  font-size: 2rem;
  padding-bottom: 0.5rem;
}

.contact-text {
  text-align: center;
  color: var(--color-text-primary);
  padding-bottom: 2rem;
}

.contact-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 0.5rem;
}

.contact-link,
.contact-link:link,
.contact-link:visited {
  color: var(--color-text-primary);
  background-color: var(--color-bg-card);
  font-size: 0.9rem;
  display: inline-flex;
  align-items: center;
  gap: 0.3rem;
  padding: 0.7rem;
  border: 1px solid black;
  border-radius: 9999px; /* Perfect circle no matter the size */
  transition: all 300ms;
}

/* Apply the color change only on hover (mouse) */
@media (hover: hover) {
  .contact-link:hover {
    color: var(--color-accent);
  }
}

/* ------ */
/* FOOTER */
/* ------ */

footer {
  color: var(--color-text-secondary);
  text-align: center;
  padding-top: 5rem;
  padding-bottom: 1rem;
}

/* ---------------- */
/* RESPONSIVE / 654 */
/* ---------------- */

@media (max-width: 654px) {
  
  /* CONTAINER */

  .container {
    padding: 0 1rem;
  }

  .section {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }

  /* HEADER SECTION */

  nav ul a:visited,
  nav ul a:active {
    color: var(--color-text-secondary);
  }

  /* PROJECTS SECTION */

  .projects-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 1.5rem;
  }

  /* EXPERIENCE SECTION */

  #experience {
    font-size: 1.1rem;
  }

  /* Move the timeline to the left */ 
  .timeline::before {
    left: 0;
  }

  /* Move timeline entries to the left */
  .timeline-entry:nth-child(odd),
  .timeline-entry:nth-child(even) {
    width: 100%;
    text-align: left;
    margin: 1.3rem 0 0 0;
    padding-left: 1.3rem;
  }
  
  /* Align the timeline circles to the line on the left */
  .timeline-entry:nth-child(odd)::before,
  .timeline-entry:nth-child(even)::before {
    left: -5px;
  }

  /* SKILLS SECTION */

  .skills-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 1.5rem;
  }

  /* CONTACT SECTION */

  .contact-links {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .contact-link {
    justify-content: center;
  }

  .contact-link:visited,
  .contact-link:active {
    color: var(--color-text-primary);
  }
}
/* ... */

